# MultiverseV1

./: .gitignore  config.json  main.py  multiverse_pb2.py  multiverse_pb2_grpc.py
backend/: Cargo.toml  build.rs
backend/proto/: multiverse.proto
backend/src/: main.rs
infra/: attach-bridge.service  attach-bridge.sh  br0-veth0.nmconnection  br0-veth2.nmconnection  br0.nmconnection  install.sh  setup-netns.service  setup-netns.sh
