[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.53.1", features = ["full"] }
tonic = "0.14.6"
prost = "0.14.4"
tonic-prost = "0.14.6"
chrono = "0.4"
caps = "0.5"
libc = "0.2.188"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
async-stream = "0.3.5"
futures-core = "0.3.33"

[build-dependencies]
tonic-prost-build = "0.14.6"